@@ -1,7 +1,7 @@
 true: inline(10)
 true: debug
 # OASIS_START
-# DO NOT EDIT (digest: 16bf4820877d500402abfbf688a04a6e)
+# DO NOT EDIT (digest: 8a9c11b02451edc77c040a83f1716adf)
 # Ignore VCS directories, you can use the same kind of rule outside 
 # OASIS_START/STOP if you want to exclude directories that contains 
 # useless stuff for the build process
@@ -26,6 +26,13 @@ true: debug
 "lib/cstruct_stubs.c": pkg_bigarray
 "lib/cstruct_stubs.c": pkg_ocplib-endian
 "lib/cstruct_stubs.c": pkg_ocplib-endian.bigstring
+# Library cstruct_lwt
+"lwt/cstruct_lwt.cmxs": use_cstruct_lwt
+<lwt/*.ml{,i}>: use_cstruct
+<lwt/*.ml{,i}>: pkg_bigarray
+<lwt/*.ml{,i}>: pkg_lwt.unix
+<lwt/*.ml{,i}>: pkg_ocplib-endian
+<lwt/*.ml{,i}>: pkg_ocplib-endian.bigstring
 # Library cstruct-syntax
 "syntax/cstruct-syntax.cmxs": use_cstruct-syntax
 <syntax/*.ml{,i}>: pkg_camlp4.lib
