@@ -1,14 +1,14 @@
 (* setup.ml generated for the first time by OASIS v0.3.0 *)
 
 (* OASIS_START *)
-(* DO NOT EDIT (digest: fd07f7f92d4bb121bcb1b36e1cb27954) *)
+(* DO NOT EDIT (digest: 77658b4f9e0f4407b7cdb82c9e4db8bc) *)
 (*
    Regenerated by OASIS v0.3.0
    Visit http://oasis.forge.ocamlcore.org for more information and
    documentation about functions used in this file.
 *)
 module OASISGettext = struct
-(* # 21 "/home/avsm/.opam/4.00.1+mirage-xen/build/oasis.0.3.0/src/oasis/OASISGettext.ml" *)
+(* # 21 "/home/avsm/.opam/4.00.1+mirage-unix/build/oasis.0.3.0/src/oasis/OASISGettext.ml" *)
 
   let ns_ str =
     str
@@ -31,7 +31,7 @@ module OASISGettext = struct
 end
 
 module OASISContext = struct
-(* # 21 "/home/avsm/.opam/4.00.1+mirage-xen/build/oasis.0.3.0/src/oasis/OASISContext.ml" *)
+(* # 21 "/home/avsm/.opam/4.00.1+mirage-unix/build/oasis.0.3.0/src/oasis/OASISContext.ml" *)
 
   open OASISGettext
 
@@ -92,7 +92,7 @@ module OASISContext = struct
 end
 
 module OASISString = struct
-(* # 1 "/home/avsm/.opam/4.00.1+mirage-xen/build/oasis.0.3.0/src/oasis/OASISString.ml" *)
+(* # 1 "/home/avsm/.opam/4.00.1+mirage-unix/build/oasis.0.3.0/src/oasis/OASISString.ml" *)
 
 
 
@@ -217,7 +217,7 @@ module OASISString = struct
 end
 
 module OASISUtils = struct
-(* # 21 "/home/avsm/.opam/4.00.1+mirage-xen/build/oasis.0.3.0/src/oasis/OASISUtils.ml" *)
+(* # 21 "/home/avsm/.opam/4.00.1+mirage-unix/build/oasis.0.3.0/src/oasis/OASISUtils.ml" *)
 
   open OASISGettext
 
@@ -312,7 +312,7 @@ module OASISUtils = struct
 end
 
 module PropList = struct
-(* # 21 "/home/avsm/.opam/4.00.1+mirage-xen/build/oasis.0.3.0/src/oasis/PropList.ml" *)
+(* # 21 "/home/avsm/.opam/4.00.1+mirage-unix/build/oasis.0.3.0/src/oasis/PropList.ml" *)
 
   open OASISGettext
 
@@ -352,7 +352,7 @@ module PropList = struct
     let clear t =
       Hashtbl.clear t
 
-(* # 71 "/home/avsm/.opam/4.00.1+mirage-xen/build/oasis.0.3.0/src/oasis/PropList.ml" *)
+(* # 71 "/home/avsm/.opam/4.00.1+mirage-unix/build/oasis.0.3.0/src/oasis/PropList.ml" *)
   end
 
   module Schema =
@@ -593,7 +593,7 @@ module PropList = struct
 end
 
 module OASISMessage = struct
-(* # 21 "/home/avsm/.opam/4.00.1+mirage-xen/build/oasis.0.3.0/src/oasis/OASISMessage.ml" *)
+(* # 21 "/home/avsm/.opam/4.00.1+mirage-unix/build/oasis.0.3.0/src/oasis/OASISMessage.ml" *)
 
 
   open OASISGettext
@@ -632,7 +632,7 @@ module OASISMessage = struct
 end
 
 module OASISVersion = struct
-(* # 21 "/home/avsm/.opam/4.00.1+mirage-xen/build/oasis.0.3.0/src/oasis/OASISVersion.ml" *)
+(* # 21 "/home/avsm/.opam/4.00.1+mirage-unix/build/oasis.0.3.0/src/oasis/OASISVersion.ml" *)
 
   open OASISGettext
 
@@ -811,7 +811,7 @@ module OASISVersion = struct
 end
 
 module OASISLicense = struct
-(* # 21 "/home/avsm/.opam/4.00.1+mirage-xen/build/oasis.0.3.0/src/oasis/OASISLicense.ml" *)
+(* # 21 "/home/avsm/.opam/4.00.1+mirage-unix/build/oasis.0.3.0/src/oasis/OASISLicense.ml" *)
 
   (** License for _oasis fields
       @author Sylvain Le Gall
@@ -851,7 +851,7 @@ module OASISLicense = struct
 end
 
 module OASISExpr = struct
-(* # 21 "/home/avsm/.opam/4.00.1+mirage-xen/build/oasis.0.3.0/src/oasis/OASISExpr.ml" *)
+(* # 21 "/home/avsm/.opam/4.00.1+mirage-unix/build/oasis.0.3.0/src/oasis/OASISExpr.ml" *)
 
 
 
@@ -941,7 +941,7 @@ module OASISExpr = struct
 end
 
 module OASISTypes = struct
-(* # 21 "/home/avsm/.opam/4.00.1+mirage-xen/build/oasis.0.3.0/src/oasis/OASISTypes.ml" *)
+(* # 21 "/home/avsm/.opam/4.00.1+mirage-unix/build/oasis.0.3.0/src/oasis/OASISTypes.ml" *)
 
 
 
@@ -1018,7 +1018,7 @@ module OASISTypes = struct
 
   type plugin_data = (all_plugin * plugin_data_purpose * (unit -> unit)) list
 
-(* # 102 "/home/avsm/.opam/4.00.1+mirage-xen/build/oasis.0.3.0/src/oasis/OASISTypes.ml" *)
+(* # 102 "/home/avsm/.opam/4.00.1+mirage-unix/build/oasis.0.3.0/src/oasis/OASISTypes.ml" *)
 
   type 'a conditional = 'a OASISExpr.choices 
 
@@ -1176,7 +1176,7 @@ module OASISTypes = struct
 end
 
 module OASISUnixPath = struct
-(* # 21 "/home/avsm/.opam/4.00.1+mirage-xen/build/oasis.0.3.0/src/oasis/OASISUnixPath.ml" *)
+(* # 21 "/home/avsm/.opam/4.00.1+mirage-unix/build/oasis.0.3.0/src/oasis/OASISUnixPath.ml" *)
 
   type unix_filename = string
   type unix_dirname = string
@@ -1260,7 +1260,7 @@ module OASISUnixPath = struct
 end
 
 module OASISHostPath = struct
-(* # 21 "/home/avsm/.opam/4.00.1+mirage-xen/build/oasis.0.3.0/src/oasis/OASISHostPath.ml" *)
+(* # 21 "/home/avsm/.opam/4.00.1+mirage-unix/build/oasis.0.3.0/src/oasis/OASISHostPath.ml" *)
 
 
   open Filename
@@ -1293,7 +1293,7 @@ module OASISHostPath = struct
 end
 
 module OASISSection = struct
-(* # 21 "/home/avsm/.opam/4.00.1+mirage-xen/build/oasis.0.3.0/src/oasis/OASISSection.ml" *)
+(* # 21 "/home/avsm/.opam/4.00.1+mirage-unix/build/oasis.0.3.0/src/oasis/OASISSection.ml" *)
 
   open OASISTypes
 
@@ -1372,12 +1372,12 @@ module OASISSection = struct
 end
 
 module OASISBuildSection = struct
-(* # 21 "/home/avsm/.opam/4.00.1+mirage-xen/build/oasis.0.3.0/src/oasis/OASISBuildSection.ml" *)
+(* # 21 "/home/avsm/.opam/4.00.1+mirage-unix/build/oasis.0.3.0/src/oasis/OASISBuildSection.ml" *)
 
 end
 
 module OASISExecutable = struct
-(* # 21 "/home/avsm/.opam/4.00.1+mirage-xen/build/oasis.0.3.0/src/oasis/OASISExecutable.ml" *)
+(* # 21 "/home/avsm/.opam/4.00.1+mirage-unix/build/oasis.0.3.0/src/oasis/OASISExecutable.ml" *)
 
   open OASISTypes
 
@@ -1408,7 +1408,7 @@ module OASISExecutable = struct
 end
 
 module OASISLibrary = struct
-(* # 21 "/home/avsm/.opam/4.00.1+mirage-xen/build/oasis.0.3.0/src/oasis/OASISLibrary.ml" *)
+(* # 21 "/home/avsm/.opam/4.00.1+mirage-unix/build/oasis.0.3.0/src/oasis/OASISLibrary.ml" *)
 
   open OASISTypes
   open OASISUtils
@@ -1841,32 +1841,32 @@ module OASISLibrary = struct
 end
 
 module OASISFlag = struct
-(* # 21 "/home/avsm/.opam/4.00.1+mirage-xen/build/oasis.0.3.0/src/oasis/OASISFlag.ml" *)
+(* # 21 "/home/avsm/.opam/4.00.1+mirage-unix/build/oasis.0.3.0/src/oasis/OASISFlag.ml" *)
 
 end
 
 module OASISPackage = struct
-(* # 21 "/home/avsm/.opam/4.00.1+mirage-xen/build/oasis.0.3.0/src/oasis/OASISPackage.ml" *)
+(* # 21 "/home/avsm/.opam/4.00.1+mirage-unix/build/oasis.0.3.0/src/oasis/OASISPackage.ml" *)
 
 end
 
 module OASISSourceRepository = struct
-(* # 21 "/home/avsm/.opam/4.00.1+mirage-xen/build/oasis.0.3.0/src/oasis/OASISSourceRepository.ml" *)
+(* # 21 "/home/avsm/.opam/4.00.1+mirage-unix/build/oasis.0.3.0/src/oasis/OASISSourceRepository.ml" *)
 
 end
 
 module OASISTest = struct
-(* # 21 "/home/avsm/.opam/4.00.1+mirage-xen/build/oasis.0.3.0/src/oasis/OASISTest.ml" *)
+(* # 21 "/home/avsm/.opam/4.00.1+mirage-unix/build/oasis.0.3.0/src/oasis/OASISTest.ml" *)
 
 end
 
 module OASISDocument = struct
-(* # 21 "/home/avsm/.opam/4.00.1+mirage-xen/build/oasis.0.3.0/src/oasis/OASISDocument.ml" *)
+(* # 21 "/home/avsm/.opam/4.00.1+mirage-unix/build/oasis.0.3.0/src/oasis/OASISDocument.ml" *)
 
 end
 
 module OASISExec = struct
-(* # 21 "/home/avsm/.opam/4.00.1+mirage-xen/build/oasis.0.3.0/src/oasis/OASISExec.ml" *)
+(* # 21 "/home/avsm/.opam/4.00.1+mirage-unix/build/oasis.0.3.0/src/oasis/OASISExec.ml" *)
 
   open OASISGettext
   open OASISUtils
@@ -1944,7 +1944,7 @@ module OASISExec = struct
 end
 
 module OASISFileUtil = struct
-(* # 21 "/home/avsm/.opam/4.00.1+mirage-xen/build/oasis.0.3.0/src/oasis/OASISFileUtil.ml" *)
+(* # 21 "/home/avsm/.opam/4.00.1+mirage-unix/build/oasis.0.3.0/src/oasis/OASISFileUtil.ml" *)
 
   open OASISGettext
 
@@ -2141,7 +2141,7 @@ end
 
 # 2142 "setup.ml"
 module BaseEnvLight = struct
-(* # 21 "/home/avsm/.opam/4.00.1+mirage-xen/build/oasis.0.3.0/src/base/BaseEnvLight.ml" *)
+(* # 21 "/home/avsm/.opam/4.00.1+mirage-unix/build/oasis.0.3.0/src/base/BaseEnvLight.ml" *)
 
   module MapString = Map.Make(String)
 
@@ -2239,7 +2239,7 @@ end
 
 # 2240 "setup.ml"
 module BaseContext = struct
-(* # 21 "/home/avsm/.opam/4.00.1+mirage-xen/build/oasis.0.3.0/src/base/BaseContext.ml" *)
+(* # 21 "/home/avsm/.opam/4.00.1+mirage-unix/build/oasis.0.3.0/src/base/BaseContext.ml" *)
 
   open OASISContext
 
@@ -2250,7 +2250,7 @@ module BaseContext = struct
 end
 
 module BaseMessage = struct
-(* # 21 "/home/avsm/.opam/4.00.1+mirage-xen/build/oasis.0.3.0/src/base/BaseMessage.ml" *)
+(* # 21 "/home/avsm/.opam/4.00.1+mirage-unix/build/oasis.0.3.0/src/base/BaseMessage.ml" *)
 
   (** Message to user, overrid for Base
       @author Sylvain Le Gall
@@ -2269,7 +2269,7 @@ module BaseMessage = struct
 end
 
 module BaseEnv = struct
-(* # 21 "/home/avsm/.opam/4.00.1+mirage-xen/build/oasis.0.3.0/src/base/BaseEnv.ml" *)
+(* # 21 "/home/avsm/.opam/4.00.1+mirage-unix/build/oasis.0.3.0/src/base/BaseEnv.ml" *)
 
   open OASISGettext
   open OASISUtils
@@ -2729,7 +2729,7 @@ module BaseEnv = struct
 end
 
 module BaseArgExt = struct
-(* # 21 "/home/avsm/.opam/4.00.1+mirage-xen/build/oasis.0.3.0/src/base/BaseArgExt.ml" *)
+(* # 21 "/home/avsm/.opam/4.00.1+mirage-unix/build/oasis.0.3.0/src/base/BaseArgExt.ml" *)
 
   open OASISUtils
   open OASISGettext
@@ -2757,7 +2757,7 @@ module BaseArgExt = struct
 end
 
 module BaseCheck = struct
-(* # 21 "/home/avsm/.opam/4.00.1+mirage-xen/build/oasis.0.3.0/src/base/BaseCheck.ml" *)
+(* # 21 "/home/avsm/.opam/4.00.1+mirage-unix/build/oasis.0.3.0/src/base/BaseCheck.ml" *)
 
   open BaseEnv
   open BaseMessage
@@ -2883,7 +2883,7 @@ module BaseCheck = struct
 end
 
 module BaseOCamlcConfig = struct
-(* # 21 "/home/avsm/.opam/4.00.1+mirage-xen/build/oasis.0.3.0/src/base/BaseOCamlcConfig.ml" *)
+(* # 21 "/home/avsm/.opam/4.00.1+mirage-unix/build/oasis.0.3.0/src/base/BaseOCamlcConfig.ml" *)
 
 
   open BaseEnv
@@ -2999,7 +2999,7 @@ module BaseOCamlcConfig = struct
 end
 
 module BaseStandardVar = struct
-(* # 21 "/home/avsm/.opam/4.00.1+mirage-xen/build/oasis.0.3.0/src/base/BaseStandardVar.ml" *)
+(* # 21 "/home/avsm/.opam/4.00.1+mirage-unix/build/oasis.0.3.0/src/base/BaseStandardVar.ml" *)
 
 
   open OASISGettext
@@ -3363,7 +3363,7 @@ module BaseStandardVar = struct
 end
 
 module BaseFileAB = struct
-(* # 21 "/home/avsm/.opam/4.00.1+mirage-xen/build/oasis.0.3.0/src/base/BaseFileAB.ml" *)
+(* # 21 "/home/avsm/.opam/4.00.1+mirage-unix/build/oasis.0.3.0/src/base/BaseFileAB.ml" *)
 
   open BaseEnv
   open OASISGettext
@@ -3411,7 +3411,7 @@ module BaseFileAB = struct
 end
 
 module BaseLog = struct
-(* # 21 "/home/avsm/.opam/4.00.1+mirage-xen/build/oasis.0.3.0/src/base/BaseLog.ml" *)
+(* # 21 "/home/avsm/.opam/4.00.1+mirage-unix/build/oasis.0.3.0/src/base/BaseLog.ml" *)
 
   open OASISUtils
 
@@ -3530,7 +3530,7 @@ module BaseLog = struct
 end
 
 module BaseBuilt = struct
-(* # 21 "/home/avsm/.opam/4.00.1+mirage-xen/build/oasis.0.3.0/src/base/BaseBuilt.ml" *)
+(* # 21 "/home/avsm/.opam/4.00.1+mirage-unix/build/oasis.0.3.0/src/base/BaseBuilt.ml" *)
 
   open OASISTypes
   open OASISGettext
@@ -3677,7 +3677,7 @@ module BaseBuilt = struct
 end
 
 module BaseCustom = struct
-(* # 21 "/home/avsm/.opam/4.00.1+mirage-xen/build/oasis.0.3.0/src/base/BaseCustom.ml" *)
+(* # 21 "/home/avsm/.opam/4.00.1+mirage-unix/build/oasis.0.3.0/src/base/BaseCustom.ml" *)
 
   open BaseEnv
   open BaseMessage
@@ -3727,7 +3727,7 @@ module BaseCustom = struct
 end
 
 module BaseDynVar = struct
-(* # 21 "/home/avsm/.opam/4.00.1+mirage-xen/build/oasis.0.3.0/src/base/BaseDynVar.ml" *)
+(* # 21 "/home/avsm/.opam/4.00.1+mirage-unix/build/oasis.0.3.0/src/base/BaseDynVar.ml" *)
 
 
   open OASISTypes
@@ -3774,7 +3774,7 @@ module BaseDynVar = struct
 end
 
 module BaseTest = struct
-(* # 21 "/home/avsm/.opam/4.00.1+mirage-xen/build/oasis.0.3.0/src/base/BaseTest.ml" *)
+(* # 21 "/home/avsm/.opam/4.00.1+mirage-unix/build/oasis.0.3.0/src/base/BaseTest.ml" *)
 
   open BaseEnv
   open BaseMessage
@@ -3864,7 +3864,7 @@ module BaseTest = struct
 end
 
 module BaseDoc = struct
-(* # 21 "/home/avsm/.opam/4.00.1+mirage-xen/build/oasis.0.3.0/src/base/BaseDoc.ml" *)
+(* # 21 "/home/avsm/.opam/4.00.1+mirage-unix/build/oasis.0.3.0/src/base/BaseDoc.ml" *)
 
   open BaseEnv
   open BaseMessage
@@ -3899,7 +3899,7 @@ module BaseDoc = struct
 end
 
 module BaseSetup = struct
-(* # 21 "/home/avsm/.opam/4.00.1+mirage-xen/build/oasis.0.3.0/src/base/BaseSetup.ml" *)
+(* # 21 "/home/avsm/.opam/4.00.1+mirage-unix/build/oasis.0.3.0/src/base/BaseSetup.ml" *)
 
   open BaseEnv
   open BaseMessage
@@ -4479,7 +4479,7 @@ end
 
 # 4480 "setup.ml"
 module InternalConfigurePlugin = struct
-(* # 21 "/home/avsm/.opam/4.00.1+mirage-xen/build/oasis.0.3.0/src/plugins/internal/InternalConfigurePlugin.ml" *)
+(* # 21 "/home/avsm/.opam/4.00.1+mirage-unix/build/oasis.0.3.0/src/plugins/internal/InternalConfigurePlugin.ml" *)
 
   (** Configure using internal scheme
       @author Sylvain Le Gall
@@ -4721,7 +4721,7 @@ module InternalConfigurePlugin = struct
 end
 
 module InternalInstallPlugin = struct
-(* # 21 "/home/avsm/.opam/4.00.1+mirage-xen/build/oasis.0.3.0/src/plugins/internal/InternalInstallPlugin.ml" *)
+(* # 21 "/home/avsm/.opam/4.00.1+mirage-unix/build/oasis.0.3.0/src/plugins/internal/InternalInstallPlugin.ml" *)
 
   (** Install using internal scheme
       @author Sylvain Le Gall
@@ -5232,7 +5232,7 @@ end
 
 # 5233 "setup.ml"
 module OCamlbuildCommon = struct
-(* # 21 "/home/avsm/.opam/4.00.1+mirage-xen/build/oasis.0.3.0/src/plugins/ocamlbuild/OCamlbuildCommon.ml" *)
+(* # 21 "/home/avsm/.opam/4.00.1+mirage-unix/build/oasis.0.3.0/src/plugins/ocamlbuild/OCamlbuildCommon.ml" *)
 
   (** Functions common to OCamlbuild build and doc plugin
     *)
@@ -5334,7 +5334,7 @@ module OCamlbuildCommon = struct
 end
 
 module OCamlbuildPlugin = struct
-(* # 21 "/home/avsm/.opam/4.00.1+mirage-xen/build/oasis.0.3.0/src/plugins/ocamlbuild/OCamlbuildPlugin.ml" *)
+(* # 21 "/home/avsm/.opam/4.00.1+mirage-unix/build/oasis.0.3.0/src/plugins/ocamlbuild/OCamlbuildPlugin.ml" *)
 
   (** Build using ocamlbuild
       @author Sylvain Le Gall
@@ -5507,7 +5507,7 @@ module OCamlbuildPlugin = struct
 end
 
 module OCamlbuildDocPlugin = struct
-(* # 21 "/home/avsm/.opam/4.00.1+mirage-xen/build/oasis.0.3.0/src/plugins/ocamlbuild/OCamlbuildDocPlugin.ml" *)
+(* # 21 "/home/avsm/.opam/4.00.1+mirage-unix/build/oasis.0.3.0/src/plugins/ocamlbuild/OCamlbuildDocPlugin.ml" *)
 
   (* Create documentation using ocamlbuild .odocl files
      @author Sylvain Le Gall
@@ -5632,6 +5632,16 @@ let setup_t =
           files_ab = [];
           sections =
             [
+               Flag
+                 ({
+                     cs_name = "lwt";
+                     cs_data = PropList.Data.create ();
+                     cs_plugin_data = [];
+                     },
+                   {
+                      flag_description = Some "build the Lwt library";
+                      flag_default = [(OASISExpr.EBool true, false)];
+                      });
                Library
                  ({
                      cs_name = "cstruct";
@@ -5649,9 +5659,7 @@ let setup_t =
                            FindlibPackage ("ocplib-endian", None);
                            FindlibPackage ("ocplib-endian.bigstring", None)
                         ];
-                      bs_build_tools =
-                        [ExternalTool "ocamlbuild"; ExternalTool "ocamlbuild"
-                        ];
+                      bs_build_tools = [ExternalTool "ocamlbuild"];
                       bs_c_sources = ["cstruct_stubs.c"];
                       bs_data_files = [];
                       bs_ccopt = [(OASISExpr.EBool true, ["-O3"])];
@@ -5667,6 +5675,40 @@ let setup_t =
                       lib_internal_modules = [];
                       lib_findlib_parent = None;
                       lib_findlib_name = None;
+                      lib_findlib_containers = [];
+                      });
+               Library
+                 ({
+                     cs_name = "cstruct_lwt";
+                     cs_data = PropList.Data.create ();
+                     cs_plugin_data = [];
+                     },
+                   {
+                      bs_build = [(OASISExpr.EBool true, true)];
+                      bs_install = [(OASISExpr.EBool true, true)];
+                      bs_path = "lwt/";
+                      bs_compiled_object = Best;
+                      bs_build_depends =
+                        [
+                           InternalLibrary "cstruct";
+                           FindlibPackage ("lwt.unix", None)
+                        ];
+                      bs_build_tools = [ExternalTool "ocamlbuild"];
+                      bs_c_sources = [];
+                      bs_data_files = [];
+                      bs_ccopt = [(OASISExpr.EBool true, [])];
+                      bs_cclib = [(OASISExpr.EBool true, [])];
+                      bs_dlllib = [(OASISExpr.EBool true, [])];
+                      bs_dllpath = [(OASISExpr.EBool true, [])];
+                      bs_byteopt = [(OASISExpr.EBool true, [])];
+                      bs_nativeopt = [(OASISExpr.EBool true, [])];
+                      },
+                   {
+                      lib_modules = ["Lwt_cstruct"];
+                      lib_pack = false;
+                      lib_internal_modules = [];
+                      lib_findlib_parent = Some "cstruct";
+                      lib_findlib_name = Some "lwt";
                       lib_findlib_containers = [];
                       });
                Library
@@ -5714,7 +5756,7 @@ let setup_t =
           };
      oasis_fn = Some "_oasis";
      oasis_version = "0.3.0";
-     oasis_digest = Some "\240\193\172\200\182\216\198\143XMJ\tAR\004\006";
+     oasis_digest = Some "6\156j\020O\237+\170\206\127\250\014\022g\156\005";
      oasis_exec = None;
      oasis_setup_args = [];
      setup_update = false;
@@ -5722,6 +5764,6 @@ let setup_t =
 
 let setup () = BaseSetup.setup setup_t;;
 
-# 5726 "setup.ml"
+# 5768 "setup.ml"
 (* OASIS_STOP *)
 let () = setup ();;
